# llm-release-decision-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  drift.yml  evaluation.yml
docs/: contracts.md  repo-structure.md  run-artifacts.md  scenario-and-policy-authoring.md  system-overview.md
docs/examples/: sample-report.md
gate_policies/: README.md  default_policy.yaml
scenarios/: README.md
scenarios/banking/: cautious_customer_transfer_fee.yaml  confused_customer_blocked_card.yaml
src/rdf/: __init__.py  errors.py  models.py
src/rdf/adapters/: api_adapter.py  base.py  mock_assistant.py
src/rdf/cli/: main.py
src/rdf/execution/: runner.py
src/rdf/gates/: release_gate.py
src/rdf/judging/: base.py  llm_judge.py  prompt_template.txt
src/rdf/reporting/: report_builder.py
src/rdf/scenarios/: loader.py  models.py
src/rdf/storage/: filesystem.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_loader.py  test_release_gate.py  test_report_builder.py  test_runner_retries.py
